src/objects/Client_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Product__c</fullName>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Client_Histories</relationshipLabel>
        <relationshipName>Client_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Paused_Last_Month__c</fullName>
        <formula>IF( AND ((Start_Date__c &gt;= First_Day_Last_Month__c), ISNULL(End_Date__c)),  Last_Day_of_Last_Month__c - Start_Date__c + 1 , 
IF( AND ((Start_Date__c &gt;= First_Day_Last_Month__c), End_Date__c &lt;= Last_Day_of_Last_Month__c), End_Date__c-Start_Date__c + 1 , 
IF( AND ((Start_Date__c &gt;= First_Day_Last_Month__c), End_Date__c &gt; Last_Day_of_Last_Month__c), Last_Day_of_Last_Month__c-Start_Date__c + 1 , 
IF( AND ((Start_Date__c &lt; First_Day_Last_Month__c), ISNULL(End_Date__c)), Last_Day_of_Last_Month__c -First_Day_Last_Month__c + 1 , 
IF( AND ((Start_Date__c &lt; First_Day_Last_Month__c), End_Date__c &lt;= Last_Day_of_Last_Month__c), End_Date__c-First_Day_Last_Month__c + 1 , 
IF( AND ((Start_Date__c &lt; First_Day_Last_Month__c), End_Date__c &gt; Last_Day_of_Last_Month__c), Last_Day_of_Last_Month__c-First_Day_Last_Month__c + 1 , 
0 
) 
) 
) 
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Paused Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Paused_This_Month__c</fullName>
        <formula>IF( AND ((Start_Date__c &gt;= First_Day_This_Month__c), ISNULL(End_Date__c)), Today()-Start_Date__c + 1 , 
IF( AND ((Start_Date__c &gt;= First_Day_This_Month__c), End_Date__c &lt;= TODAY()), End_Date__c-Start_Date__c + 1 ,
IF( AND ((Start_Date__c &lt; First_Day_This_Month__c), ISNULL(End_Date__c)), Today()-First_Day_This_Month__c + 1 , 
IF( AND ((Start_Date__c &lt; First_Day_This_Month__c), End_Date__c &lt;= TODAY()), End_Date__c-First_Day_This_Month__c + 1 , 
0
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Paused This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>null if the product status is ongoing</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_Last_Month__c</fullName>
        <formula>DATE(
     YEAR(TODAY()),
     MONTH(TODAY()) - 1,
     1
)</formula>
        <label>First Day of Last Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_This_Month__c</fullName>
        <formula>DATE(
     YEAR(TODAY()),
     MONTH(TODAY()),
     1
)</formula>
        <label>First Day of This Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Last_Month__c</fullName>
        <formula>DATE(
     YEAR(TODAY()),
     MONTH(TODAY()),
     1
) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Last Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lasting_Days__c</fullName>
        <formula>IF(ISNULL(End_Date__c), today() -Start_Date__c+1, End_Date__c - Start_Date__c+1)</formula>
        <label>Lasting Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paused_Revenue_Last_Month__c</fullName>
        <formula>IF(Sold_to_Pause__c == true, 0 ,Days_Paused_Last_Month__c *  Account_Product__r.Daily_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paused Revenue - Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paused_Revenue_Last_Month_w_STP__c</fullName>
        <formula>Days_Paused_Last_Month__c * Account_Product__r.Daily_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paused Revenue - Last Month (w/ STP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paused_Revenue_This_Month__c</fullName>
        <formula>IF(Sold_to_Pause__c == True, 0,Days_Paused_This_Month__c *  Account_Product__r.Daily_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paused Revenue - This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paused_Revenue_This_Month_w_STP__c</fullName>
        <formula>Days_Paused_This_Month__c * Account_Product__r.Daily_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paused Revenue - This Month (w/ STP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_to_Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold to Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDateEqualsEndDate__c</fullName>
        <formula>IF(Start_Date__c = End_Date__c , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartDateEqualsEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client_History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Product__c</columns>
        <columns>Days_Paused_Last_Month__c</columns>
        <columns>Days_Paused_This_Month__c</columns>
        <columns>Paused_Revenue_Last_Month__c</columns>
        <columns>Paused_Revenue_Last_Month_w_STP__c</columns>
        <columns>Paused_Revenue_This_Month__c</columns>
        <columns>Paused_Revenue_This_Month_w_STP__c</columns>
        <columns>Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>StartDateEqualsEndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ClientHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client_Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>